@@ -24,6 +24,29 @@ import org.eclipse.ui.dialogs.WizardNewProjectCreationPage;
  */
 public class NewCProjectWizardPage extends WizardNewProjectCreationPage {
 
+	/**
+	 *  Unique string ID for this page.  Used by Managed Build's custom page manager to refer to this page.
+	 */
+	public static final String PAGE_ID = "org.eclipse.cdt.ui.wizard.basicPage"; //$NON-NLS-1$
+	
+	/* TODO: Implement proper data publishing from this wizard page.
+	 * 
+	 * The following items would in theory be used to publish the project name and location with
+	 * the managed build system's custom wizard page manager.  However, this would create a dependency
+	 * on MBS by the core, which is not very attractive.  It seems like it might be worthwhile in the future
+	 * to move the data publishing capabilities of the page manager out into another, more generic class
+	 * in the core.
+	 * 
+	 * For now, interested parties can obtain the IWizard page of this page from the page manager, cast it
+	 * to a NewCProjectWizardPage, and obtain the data via its public methods.  Messy, but it avoids
+	 * the unwanted dependency. 
+	 * 
+	 * 
+	public static final String PROJECT_NAME = "projectName"; //$NON-NLS-1$
+	public static final String PROJECT_LOCATION = "projectLocation"; //$NON-NLS-1$
+	*/
+	
+	
 	public NewCProjectWizardPage(String pageName) {
 		super(pageName);
 	}
@@ -51,6 +74,8 @@ public class NewCProjectWizardPage extends WizardNewProjectCreationPage {
 				setErrorMessage(validLocation.getMessage());
 				return false;
 			}
+			
+			
 			return true;
 		}
 		return false;
