@@ -1,3 +1,7 @@
+2005-06-07 Alain Magloire
+	Patch form Chris Recoskie to provide an ID to the wizard.
+	* src/org/eclipse/cdt/ui/wizards/NewCProjectWizardPage.java
+
 2005-05-27 Alain Magloire
 	Patch from Dave Daoust to externalize some strings
 	* refactor/org/eclipse/cdt/internal/core/refactoring/rename/RenameElementProcessor.java
